// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`board responds correctly to state restarts the game 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  height: 80vh;
  width: 20%;
  margin: auto;
}

.c0 > label {
  position: absolute;
  top: calc(34% - 1em);
  font-family: Nunito;
}

.c0 > button {
  box-shadow: 0 0.5rem 0.5rem rgba(0,0,0,0.2);
  padding: 10px 10px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-family: Quicksand;
  font-weight: bold;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  -webkit-transition: all linear 0.2s;
  transition: all linear 0.2s;
  color: black;
}

.c0 > button:hover {
  background-color: mediumaquamarine;
  -webkit-transform: scale(1.02);
  -ms-transform: scale(1.02);
  transform: scale(1.02);
}

<div>
  <form
    class="c0"
  >
    <label>
      Select a difficulty
    </label>
    <button
      data-testid="button"
      style="display: none;"
      value="test"
    />
    <button
      class="easy"
      value="easy"
    >
      Easy
    </button>
    <button
      class="advanced"
      value="advanced"
    >
      Advanced
    </button>
    <button
      class="hard"
      value="hard"
    >
      Hard
    </button>
  </form>
</div>
`;

exports[`score board functionality fetch the score  1`] = `
.c0 {
  font-family: Nunito,sans-serif;
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  list-style: none;
  text-align: center;
  padding-left: 0;
}

.c1::before {
  content: "";
  width: 65%;
  display: block;
  margin: auto;
  border-top: 1px solid rgba(0,0,0,0.3);
}

<ol
  class="c0"
>
  Top 3 players:
  <li
    class="c1"
  >
    Player: test
            Score: 1
  </li>
</ol>
`;

exports[`score board functionality updates after submitting new score 1`] = `
.c0 {
  font-family: Nunito,sans-serif;
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  list-style: none;
  text-align: center;
  padding-left: 0;
}

.c1::before {
  content: "";
  width: 65%;
  display: block;
  margin: auto;
  border-top: 1px solid rgba(0,0,0,0.3);
}

<ol
  class="c0"
>
  Top 3 players:
  <li
    class="c1"
  >
    Player: test
            Score: 420
  </li>
</ol>
`;
